# Matrixes

./: CMakeLists.txt  README.md
src/: main.cpp
src/Matrix/: Container.h  Errors.h  Interface.h
src/Matrix/Definitions/: OrdinaryMatrix.h  SparceMatrix.h
tests/: CMakeLists.txt  DeterminantTests.cpp
